--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Mechanical Engineering Undergraduate</h1>
         <p class="subtitle">MI Engineering Intern @ Amphenol &bull; Robotics & Automation Enthusiast</p>
         <!-- Replace src with your own image -->
-        <img src="/assets/bklreturns.jpg" alt="Profile Photo" class="hero-img">
+        <img src="/assets/bklreturns.jpg" alt="Profile Photo">
       </div>
     </section>
     <section id="about" class="section bg-light">
@@ -115,7 +115,7 @@
         </div>
         <div>
           <!-- Placeholder for contact image or graphic -->
-          <img src="/assets/bkl.jpg" alt="Contact Illustration" class="contact-img">
+          <img src="/assets/bkl.jpg" alt="Contact Illustration">
         </div>
       </div>
     </section>
