--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <h1>Mechanical Engineering Undergraduate</h1>
         <p class="subtitle">MI Engineering Intern @ Amphenol &bull; Robotics & Automation Enthusiast</p>
-        <img src="/assets/bklreturns.jpg" alt="Profile Photo">
+        <img src="assets/bklreturns.jpg" alt="Profile Photo">
       </div>
     </section>
     <section id="about" class="section bg-light">
@@ -113,7 +113,7 @@
           <p>Interested in the research report or design proposal? Reach out to learn more or collaborate.</p>
         </div>
         <div>
-          <img src="/assets/bkl.jpg" alt="Contact Illustration">
+          <img src="assets/bkl.jpg" alt="Contact Illustration">
         </div>
       </div>
     </section>
