--- a/index.html
+++ b/index.html
@@ -9,29 +9,45 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="container nav-flex">
+    <div class="nav-flex">
       <div class="logo">Atharva Joshi</div>
       <nav>
-        <a href="#about">About</a>
+        <a href="#home">Home</a>
         <a href="#projects">Projects</a>
+        <a href="#about">About Me</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
       </nav>
+      <div class="menu-icon">&#9776;</div>
     </div>
   </header>
   <main>
-    <section class="hero">
-      <div class="container">
-        <h1>Mechanical Engineering Undergraduate</h1>
-        <p class="subtitle">MI Engineering Intern @ Amphenol &bull; Robotics & Automation Enthusiast</p>
-        <img src="assets/bklreturns.jpg" alt="Profile Photo" style="width:15em; border:none; border-bottom:0px">
+    <!-- Split hero section -->
+    <section id="home" class="split-hero">
+      <div class="split-left">
+        <img src="assets/bklreturns.jpg" alt="Profile Photo" class="hero-img">
+      </div>
+      <div class="split-right">
+        <h1 class="main-heading">My<br>Portfolio</h1>
+        <p class="hero-desc">
+          Mechanical Engineering undergraduate, MI Engineering Intern @ Amphenol, strong in robotics, automation, and mechatronics.
+        </p>
+        <div class="hero-actions">
+          <a href="#projects" class="button">Explore Now</a>
+          <a href="#" class="button secondary"><span class="icon">&#9658;</span> Play Video</a>
+        </div>
+        <div class="page-count">Page | <span>01</span></div>
       </div>
     </section>
-    <section id="about" class="section bg-light">
-      <div class="container two-col">
+
+    <!-- About & Skills -->
+    <section id="about" class="section split-about">
+      <div class="about-wrap">
         <div>
           <h2>About Me</h2>
-          <p>I am a Mechanical Engineering undergraduate at Penn State with a strong interest in robotics, automation, and mechatronics. Passionate about leveraging technology to solve real-world problems.</p>
+          <p>
+            Mechanical Engineering undergraduate at Penn State. Passionate about solving real-world problems through robotics, automation, and mechatronics. 
+          </p>
           <ul class="info-list">
             <li><b>Penn State:</b> Mech. E (Junior), Minor: Mechatronics</li>
             <li><b>Interests:</b> Robotics, Automation, Industry 4.0</li>
@@ -49,79 +65,76 @@
         </div>
       </div>
     </section>
+
+    <!-- Projects -->
     <section id="projects" class="section">
-      <div class="container">
-        <h2>Projects</h2>
-        <div class="project-grid">
-          <div class="project-card">
-            <h3>Tone Control/Karaoke Mixer Circuit</h3>
-            <p>Five-stage audio processing circuit offering mixer/karaoke switching, tone control, volume adjustment, and LED volume display. <br>
-              <span class="sm-label">Circuit Design, NI Multisim, MATLAB</span>
-            </p>
-            <div class="achievement">Achievement: Clear audio with effective tone control.</div>
-          </div>
-          <div class="project-card">
-            <h3>ASME - Assistive Tech</h3>
-            <p>Multi-sensor vibration feedback system to help visually impaired users, utilizing Arduino, ultrasonic sensors, and vibration motors for real-time obstacle detection. <br>
-              <span class="sm-label">Team Leadership, Sensor Integration, SolidWorks</span>
-            </p>
-            <div class="achievement">Achievement: Successfully developed a tactile feedback device improving user experience.</div>
-          </div>
-          <div class="project-card">
-            <h3>Kibble Dispenser for Service Dogs</h3>
-            <p>Wheelchair-attachable dog food dispenser for low-dexterity individuals. Delivers one kibble at a time with minimal effort. <br>
-              <span class="sm-label">CAD (Fusion 360), 3D Printing, Prototyping</span>
-            </p>
-            <div class="achievement">Achievement: 90% success rate, successfully operated by target users.</div>
-          </div>
-          <div class="project-card">
-            <h3>MM-LPBF AM Research</h3>
-            <p>Finite element analysis (FEA) on brass-steel alloy components using Ansys and Abaqus (<2% error in deformation). Reduced mesh element count by 40%, improved simulation accuracy by 30%.</p>
-            <div class="sm-label">FEA (Ansys, Abaqus), Strength of Materials</div>
-          </div>
+      <h2 class="section-title">Projects</h2>
+      <div class="project-grid">
+        <div class="project-card">
+          <h3>Tone Control/Karaoke Mixer Circuit</h3>
+          <p>
+            Five-stage audio processing, mixer/karaoke switching, tone control, volume adjustment, and LED volume display. 
+            <span class="sm-label">Circuit Design, NI Multisim, MATLAB</span>
+          </p>
+          <div class="achievement">Achievement: Clear audio with effective tone control.</div>
+        </div>
+        <div class="project-card">
+          <h3>ASME - Assistive Tech</h3>
+          <p>
+            Multi-sensor vibration feedback system for visually impaired users: Arduino, ultrasonic sensors, vibration motors for real-time obstacle detection.
+            <span class="sm-label">Team Leadership, Sensor Integration, SolidWorks</span>
+          </p>
+          <div class="achievement">Achievement: Tactile feedback device improving user experience.</div>
+        </div>
+        <div class="project-card">
+          <h3>Kibble Dispenser for Service Dogs</h3>
+          <p>
+            Wheelchair-attachable dog food dispenser for low-dexterity users. Delivers one kibble at a time with minimal effort.
+            <span class="sm-label">CAD (Fusion 360), 3D Printing, Prototyping</span>
+          </p>
+          <div class="achievement">Achievement: 90% success rate operated by target users.</div>
+        </div>
+        <div class="project-card">
+          <h3>MM-LPBF AM Research</h3>
+          <p>
+            FEA on brass-steel alloy components with Ansys & Abaqus (<2% error, 40% mesh count reduction). Simulation accuracy improved by 30%.
+            <span class="sm-label">FEA (Ansys, Abaqus), Strength of Materials</span>
+          </p>
         </div>
       </div>
     </section>
-    <section id="experience" class="section bg-light">
-      <div class="container">
-        <h2>Experience</h2>
-        <ul class="exp-list">
-          <li>
-            <b>Amphenol Communications Solutions</b> - Mechanical Integrity Engineering Intern (Ongoing)
-          </li>
-          <li>
-            <b>Origin Labs Penn State</b> - Technician
-          </li>
-          <li>
-            <b>S.H.A.P.E Lab</b> - Research Assistant
-          </li>
-          <li>
-            <b>ASME Club</b> - Project Lead
-          </li>
-        </ul>
-      </div>
+    
+    <!-- Experience -->
+    <section id="experience" class="section split-experience">
+      <h2 class="section-title">Experience</h2>
+      <ul class="exp-list">
+        <li><b>Amphenol Communications Solutions</b> - MI Engineering Intern (Ongoing)</li>
+        <li><b>Origin Labs Penn State</b> - Technician</li>
+        <li><b>S.H.A.P.E Lab</b> - Research Assistant</li>
+        <li><b>ASME Club</b> - Project Lead</li>
+      </ul>
     </section>
-    <section id="contact" class="section">
-      <div class="container contact-flex">
+
+    <!-- Contact -->
+    <section id="contact" class="section split-contact">
+      <div class="contact-wrap">
         <div>
           <h2>Contact</h2>
           <p>
-            Email: <a href="mailto:atharvajosh@gmail.com">atharvajosh@gmail.com</a> <br>
-            LinkedIn: <a href="https://www.linkedin.com/in/atharvajoshi2027" target="_blank">LinkedIn Profile</a> <br>
+            Email: <a href="mailto:atharvajosh@gmail.com">atharvajosh@gmail.com</a><br>
+            LinkedIn: <a href="https://www.linkedin.com/in/atharvajoshi2027" target="_blank">View Profile</a><br>
             GitHub: <a href="https://github.com/WarGodAKJ" target="_blank">WarGodAKJ</a>
           </p>
           <p>Interested in the research report or design proposal? Reach out to learn more or collaborate.</p>
         </div>
         <div>
-          <img src="assets/bkl.jpg" alt="Contact Illustration" style="width:15em; border:none; border-bottom:0px">
+          <img src="assets/bkl.jpg" alt="Contact Illustration" class="contact-img">
         </div>
       </div>
     </section>
   </main>
   <footer class="footer">
-    <div class="container">
-      &copy; 2025 Atharva Joshi. Built for Penn State ME Portfolio. 
-    </div>
+    &copy; 2025 Atharva Joshi. Built for Penn State ME Portfolio.
   </footer>
 </body>
 </html>
