--- a/index.html
+++ b/index.html
@@ -6,19 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <script>
-    // Smooth scroll for "See My Work"
-    document.addEventListener("DOMContentLoaded", function() {
-      var btn = document.getElementById('see-work-btn');
-      if (btn) {
-        btn.addEventListener('click', function(e) {
-          e.preventDefault();
-          var target = document.getElementById('projects');
-          if (target) target.scrollIntoView({ behavior: 'smooth' });
-        });
-      }
-    });
-  </script>
 </head>
 <body>
   <header class="navbar">
@@ -26,8 +13,8 @@
       <div class="logo">Atharva Joshi</div>
       <nav>
         <a href="#home">Home</a>
-        <a href="#projects">Projects</a>
         <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -35,44 +22,39 @@
     </div>
   </header>
   <main>
-    <!-- Split hero section -->
+    <!-- Split hero with typing animation -->
     <section id="home" class="split-hero">
       <div class="split-left">
         <img src="assets/bklreturns.jpg" alt="Profile Photo" class="hero-img">
       </div>
       <div class="split-right">
-        <h1 class="main-heading">My<br>Portfolio</h1>
-        <p class="hero-desc">
-          Mechanical Engineering undergraduate, MI Engineering Intern @ Amphenol, strong in robotics, automation, and mechatronics.
-        </p>
-        <div class="hero-actions">
-          <a href="#projects" id="see-work-btn" class="button">See My Work</a>
+        <h1><span id="typewriter"></span></h1>
+        <div class="about-header-lines">
+          <div class="about-header-main">Undergraduate Student | B.S. Mechanical Engineering | Minor: Mechatronics</div>
+          <div class="about-header-tagline">Empowering the Future through Intelligent Engineering</div>
         </div>
-        <div class="page-count">Page | <span>01</span></div>
       </div>
     </section>
 
-    <!-- About & Skills -->
-    <section id="about" class="section split-about">
+    <!-- About Me -->
+    <section id="about" class="section">
+      <h2 class="section-title accent">About Me</h2>
       <div class="about-wrap">
         <div>
-          <h2>About Me</h2>
           <p>
-            Mechanical Engineering undergraduate at Penn State. Passionate about solving real-world problems through robotics, automation, and mechatronics. 
+            I'm a Mech.E student with a strong interest in robotics and Industry 4.0, backed by industry experience in mechanical integrity and product design. My work spans CAD modeling, FEA simulation, and prototyping for real-world applications, from vibration fixtures for PCB testing to ergonomic assistive devices. I’m drawn to the evolving challenges of miniaturization, automation, and design for manufacturability that define the future of hardware.
           </p>
           <ul class="info-list">
-            <li><b>Penn State:</b> Mech. E (Junior), Minor: Mechatronics</li>
-            <li><b>Interests:</b> Robotics, Automation, Industry 4.0</li>
+            <li><b>Interests:</b> Hardware Product Design, DFAM, Human-Robot Interaction, and much more 🙂</li>
           </ul>
         </div>
         <div>
-          <h2>Skills</h2>
+          <h3 class="skills-title accent">Skills</h3>
           <ul class="skills-list">
-            <li>FEA: Ansys, Abaqus</li>
-            <li>CAD: SolidWorks, Fusion</li>
-            <li>Coding: C++, MATLAB</li>
-            <li>Team Leadership, Arduino, Ultrasonic Sensors</li>
-            <li>Vibration Feedback, 3D Printing, Technical Writing</li>
+            <li><b>CAD and Simulation:</b> SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim, FEA.</li>
+            <li><b>Engineering Methods:</b> DFM/DFA, prototyping, root cause analysis, GD&T (ASME Y14.5), ISO standards.</li>
+            <li><b>Programming:</b> C++, MATLAB, Visual Basic, Arduino IDE.</li>
+            <li><b>Tools:</b> Microsoft Office, Minitab, PowerApps, First Aid/CPR/AED.</li>
           </ul>
         </div>
       </div>
@@ -80,58 +62,118 @@
 
     <!-- Projects -->
     <section id="projects" class="section">
-      <h2 class="section-title">Projects</h2>
+      <h2 class="section-title accent">Projects</h2>
+      <div class="projects-instructions accent">Click a project to learn more</div>
       <div class="project-grid">
-        <div class="project-card">
-          <h3>Tone Control/Karaoke Mixer Circuit</h3>
+        <!-- Project Card 1 -->
+        <div class="project-card" data-project="proj1">
+          <h3 class="accent">Tone Control/Karaoke Mixer Circuit</h3>
           <p>
-            Five-stage audio processing, mixer/karaoke switching, tone control, volume adjustment, and LED volume display. 
+            Five-stage audio processing, mixer/karaoke switching, tone control, volume adjustment, and LED volume display.
             <span class="sm-label">Circuit Design, NI Multisim, MATLAB</span>
           </p>
-          <div class="achievement">Achievement: Clear audio with effective tone control.</div>
+          <div class="achievement accent">Achievement: Clear audio with effective tone control.</div>
         </div>
-        <div class="project-card">
-          <h3>ASME - Assistive Tech</h3>
+        <!-- Project Card 2 -->
+        <div class="project-card" data-project="proj2">
+          <h3 class="accent">ASME - Assistive Tech</h3>
           <p>
-            Multi-sensor vibration feedback system for visually impaired users: Arduino, ultrasonic sensors, vibration motors for real-time obstacle detection.
+            Multi-sensor vibration feedback system for visually impaired users, Arduino, ultrasonic sensors, vibration motors for real-time obstacle detection.
             <span class="sm-label">Team Leadership, Sensor Integration, SolidWorks</span>
           </p>
-          <div class="achievement">Achievement: Tactile feedback device improving user experience.</div>
+          <div class="achievement accent">Achievement: Tactile feedback device improving user experience.</div>
         </div>
-        <div class="project-card">
-          <h3>Kibble Dispenser for Service Dogs</h3>
+        <!-- Project Card 3 -->
+        <div class="project-card" data-project="proj3">
+          <h3 class="accent">Kibble Dispenser for Service Dogs</h3>
           <p>
             Wheelchair-attachable dog food dispenser for low-dexterity users. Delivers one kibble at a time with minimal effort.
             <span class="sm-label">CAD (Fusion 360), 3D Printing, Prototyping</span>
           </p>
-          <div class="achievement">Achievement: 90% success rate operated by target users.</div>
+          <div class="achievement accent">Achievement: 90% success rate operated by target users.</div>
         </div>
-        <div class="project-card">
-          <h3>MM-LPBF AM Research</h3>
+        <!-- Project Card 4 -->
+        <div class="project-card" data-project="proj4">
+          <h3 class="accent">MM-LPBF AM Research</h3>
           <p>
-            FEA on brass-steel alloy components with Ansys & Abaqus (<2% error, 40% mesh count reduction). Simulation accuracy improved by 30%.
+            FEA on brass-steel alloy components with Ansys & Abaqus (&lt;2% error, 40% mesh count reduction). Simulation accuracy improved by 30%.
             <span class="sm-label">FEA (Ansys, Abaqus), Strength of Materials</span>
           </p>
         </div>
       </div>
+      <!-- Modals for each project -->
+      <div id="modal-bg" class="modal-bg"></div>
+      <!-- Project modals are injected here by JS -->
     </section>
-    
-    <!-- Experience -->
-    <section id="experience" class="section split-experience">
-      <h2 class="section-title">Experience</h2>
-      <ul class="exp-list">
-        <li><b>Amphenol Communications Solutions</b> - MI Engineering Intern (Ongoing)</li>
-        <li><b>Origin Labs Penn State</b> - Technician</li>
-        <li><b>S.H.A.P.E Lab</b> - Research Assistant</li>
-        <li><b>ASME Club</b> - Project Lead</li>
-      </ul>
+
+    <!-- Experience (Collapsible) -->
+    <section id="experience" class="section">
+      <h2 class="section-title accent">Experience</h2>
+      <div class="exp-list">
+        <!-- Amphenol -->
+        <div class="exp-card">
+          <div class="exp-header" data-exp="amphenol">
+            <span class="exp-title accent"><b>Amphenol Communications Solutions</b></span>
+            <span class="exp-dates">May 2025 – Aug 2025</span>
+          </div>
+          <div class="exp-body" id="amphenol-body">
+            <ul>
+              <li>Increased reporting efficiency for 15+ projects by automating LLCR data analysis using Minitab and Excel.</li>
+              <li>Reduced report turnaround time by 30 percent by co-developing a PowerApp integrated with SharePoint for structured customer failure submissions.</li>
+              <li>Accelerated test setups for 10+ client projects (incl. Cisco) by designing custom vibration fixtures in SolidWorks for complex PCB layouts.</li>
+              <li>Resolved qualification test failures through root cause analysis, ensuring compliance with ISO standards.</li>
+            </ul>
+          </div>
+        </div>
+        <!-- SHAPE Lab -->
+        <div class="exp-card">
+          <div class="exp-header" data-exp="shape">
+            <span class="exp-title accent"><b>S.H.A.P.E. Lab - Human-Centered Robotics</b></span>
+            <span class="exp-dates">Oct 2024 – Present</span>
+          </div>
+          <div class="exp-body" id="shape-body">
+            <ul>
+              <li>Achieved less than 2 percent error in FEA deformation analysis by optimizing mesh refinement in Ansys and Abaqus.</li>
+              <li>Improved simulation speed by 40 percent through mesh convergence studies that reduced element count.</li>
+              <li>Enhanced reliability of LPBF part simulations by 30 percent by correlating deformation behavior with mesh density.</li>
+            </ul>
+          </div>
+        </div>
+        <!-- Origin Labs -->
+        <div class="exp-card">
+          <div class="exp-header" data-exp="origin">
+            <span class="exp-title accent"><b>Origin Labs - Technician</b></span>
+            <span class="exp-dates">Oct 2024 – Present</span>
+          </div>
+          <div class="exp-body" id="origin-body">
+            <ul>
+              <li>Led product development for a client-sponsored medical device (“PALMS”), redesigning a patent-backed tablet holder to improve ergonomics, integrate battery housing and accessibility features, and incorporate a 180° rotary detent mechanism.</li>
+              <li>Reduced prototype lead time by 40 percent by designing 100+ parts in SolidWorks and Fusion 360 using DFM/DFA principles.</li>
+              <li>Cut lab downtime by 25 percent by maintaining and calibrating 30+ Industry 4.0 machines.</li>
+            </ul>
+          </div>
+        </div>
+        <!-- ASME -->
+        <div class="exp-card">
+          <div class="exp-header" data-exp="asme">
+            <span class="exp-title accent"><b>ASME Club - Project Lead</b></span>
+            <span class="exp-dates">Jan 2024 – Present</span>
+          </div>
+          <div class="exp-body" id="asme-body">
+            <ul>
+              <li>Directed a 15-member interdisciplinary team to develop a SolidWorks-designed wearable device, enhancing spatial awareness for visually impaired users and reducing navigation error by 60 percent in user tests.</li>
+              <li>Engineered a closed-loop system with Arduino microcontrollers, ultrasonic sensors, and vibration motors, programming control logic in C++ for sub-200 millisecond object detection.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="section split-contact">
+    <section id="contact" class="section">
+      <h2 class="section-title accent">Contact</h2>
       <div class="contact-wrap">
         <div>
-          <h2>Contact</h2>
           <p>
             Email: <a href="mailto:atharvajosh@gmail.com">atharvajosh@gmail.com</a><br>
             LinkedIn: <a href="https://www.linkedin.com/in/atharvajoshi2027" target="_blank">View Profile</a><br>
@@ -145,8 +187,11 @@
       </div>
     </section>
   </main>
+
   <footer class="footer">
     &copy; 2025 Atharva Joshi. Built for Penn State ME Portfolio.
   </footer>
+
+  <script src="portfolio.js"></script>
 </body>
 </html>
