--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- Additive Manufacturing Research -->
         <div class="project-card" data-project="proj4">
           <h3 class="accent project-title">Additive Manufacturing Research</h3>
-          <img src="assets/research_img_1.jpg" alt="Additive Manufacturing Research" class="project-thumb">
+          <img src="assets/research_img_1.jpeg" alt="Additive Manufacturing Research" class="project-thumb">
         </div>
       </div>
       <div id="modal-bg" class="modal-bg"></div>
