--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   </header>
   <main>
-    <!-- Split hero with typing animation -->
+    <!-- Split hero typing animation (unchanged) -->
     <section id="home" class="split-hero">
       <div class="split-left">
         <img src="assets/bklreturns.jpg" alt="Profile Photo" class="hero-img">
@@ -65,48 +65,32 @@
       <h2 class="section-title accent">Projects</h2>
       <div class="projects-instructions accent">Click a project to learn more</div>
       <div class="project-grid">
-        <!-- Project Card 1 -->
+        <!-- Tone Control Mixer -->
         <div class="project-card" data-project="proj1">
-          <h3 class="accent">Tone Control/Karaoke Mixer Circuit</h3>
-          <p>
-            Five-stage audio processing, mixer/karaoke switching, tone control, volume adjustment, and LED volume display.
-            <span class="sm-label">Circuit Design, NI Multisim, MATLAB</span>
-          </p>
-          <div class="achievement accent">Achievement: Clear audio with effective tone control.</div>
+          <h3 class="accent project-title">Tone Control/Karaoke Mixer Circuit</h3>
+          <img src="assets/project1-img.jpg" alt="Mixer Circuit" class="project-thumb">
         </div>
-        <!-- Project Card 2 -->
+        <!-- ASME Assistive Tech -->
         <div class="project-card" data-project="proj2">
-          <h3 class="accent">ASME - Assistive Tech</h3>
-          <p>
-            Multi-sensor vibration feedback system for visually impaired users, Arduino, ultrasonic sensors, vibration motors for real-time obstacle detection.
-            <span class="sm-label">Team Leadership, Sensor Integration, SolidWorks</span>
-          </p>
-          <div class="achievement accent">Achievement: Tactile feedback device improving user experience.</div>
+          <h3 class="accent project-title">ASME - Assistive Tech</h3>
+          <img src="assets/project2-img.jpg" alt="ASME Assistive Tech" class="project-thumb">
         </div>
-        <!-- Project Card 3 -->
+        <!-- Kibble Dispenser -->
         <div class="project-card" data-project="proj3">
-          <h3 class="accent">Kibble Dispenser for Service Dogs</h3>
-          <p>
-            Wheelchair-attachable dog food dispenser for low-dexterity users. Delivers one kibble at a time with minimal effort.
-            <span class="sm-label">CAD (Fusion 360), 3D Printing, Prototyping</span>
-          </p>
-          <div class="achievement accent">Achievement: 90% success rate operated by target users.</div>
+          <h3 class="accent project-title">Kibble Dispenser for Service Dogs</h3>
+          <img src="assets/project3-img.jpg" alt="Kibble Dispenser" class="project-thumb">
         </div>
-        <!-- Project Card 4 -->
+        <!-- Additive Manufacturing Research -->
         <div class="project-card" data-project="proj4">
-          <h3 class="accent">MM-LPBF AM Research</h3>
-          <p>
-            FEA on brass-steel alloy components with Ansys & Abaqus (&lt;2% error, 40% mesh count reduction). Simulation accuracy improved by 30%.
-            <span class="sm-label">FEA (Ansys, Abaqus), Strength of Materials</span>
-          </p>
+          <h3 class="accent project-title">Additive Manufacturing Research</h3>
+          <img src="assets/research_img_1.jpeg" alt="Additive Manufacturing Research" class="project-thumb">
         </div>
       </div>
-      <!-- Modals for each project -->
       <div id="modal-bg" class="modal-bg"></div>
-      <!-- Project modals are injected here by JS -->
+      <!-- Project modals injected via JS -->
     </section>
 
-    <!-- Experience (Collapsible) -->
+    <!-- Experience (unchanged, collapsible) -->
     <section id="experience" class="section">
       <h2 class="section-title accent">Experience</h2>
       <div class="exp-list">
@@ -169,7 +153,7 @@
       </div>
     </section>
 
-    <!-- Contact -->
+    <!-- Contact (unchanged) -->
     <section id="contact" class="section">
       <h2 class="section-title accent">Contact</h2>
       <div class="contact-wrap">
@@ -191,7 +175,6 @@
   <footer class="footer">
     &copy; 2025 Atharva Joshi. Built for Penn State ME Portfolio.
   </footer>
-
   <script src="portfolio.js"></script>
 </body>
 </html>
