--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h3 class="accent">Tone Control/Karaoke Mixer Circuit</h3>
           <p>
             Five-stage audio processing, mixer/karaoke switching, tone control, volume adjustment, and LED volume display.
-            <span class="sm-label">Circuit Design, NI Multisim, MATLAB</span>
+            <span class="sm-label">NI Multisim, MATLAB</span>
           </p>
           <div class="achievement accent">Achievement: Clear audio with effective tone control.</div>
         </div>
@@ -79,7 +79,7 @@
           <h3 class="accent">ASME - Assistive Tech</h3>
           <p>
             Multi-sensor vibration feedback system for visually impaired users, Arduino, ultrasonic sensors, vibration motors for real-time obstacle detection.
-            <span class="sm-label">Team Leadership, Sensor Integration, SolidWorks</span>
+            <span class="sm-label">Arduino, C++, SolidWorks</span>
           </p>
           <div class="achievement accent">Achievement: Tactile feedback device improving user experience.</div>
         </div>
@@ -88,16 +88,16 @@
           <h3 class="accent">Kibble Dispenser for Service Dogs</h3>
           <p>
             Wheelchair-attachable dog food dispenser for low-dexterity users. Delivers one kibble at a time with minimal effort.
-            <span class="sm-label">CAD (Fusion 360), 3D Printing, Prototyping</span>
+            <span class="sm-label">Fusion 360, 3D Printing, Prototyping</span>
           </p>
           <div class="achievement accent">Achievement: 90% success rate operated by target users.</div>
         </div>
         <!-- Project Card 4 -->
         <div class="project-card" data-project="proj4">
-          <h3 class="accent">MM-LPBF AM Research</h3>
+          <h3 class="accent">Additive Manufacturing Research</h3>
           <p>
             FEA on brass-steel alloy components with Ansys & Abaqus (&lt;2% error, 40% mesh count reduction). Simulation accuracy improved by 30%.
-            <span class="sm-label">FEA (Ansys, Abaqus), Strength of Materials</span>
+            <span class="sm-label">FEA (Ansys, Abaqus)</span>
           </p>
         </div>
       </div>
