--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <!-- Amphenol -->
         <div class="exp-card">
           <div class="exp-header" data-exp="amphenol">
-            <span class="exp-title accent"><b>Amphenol Communications Solutions</b></span>
+            <span class="exp-title accent"><b>Mechanical Intergity Engineering Intern- Amphenol Communication Solutions</b></span>
             <span class="exp-dates">May 2025 – Aug 2025</span>
           </div>
           <div class="exp-body" id="amphenol-body">
@@ -128,7 +128,7 @@
         <!-- SHAPE Lab -->
         <div class="exp-card">
           <div class="exp-header" data-exp="shape">
-            <span class="exp-title accent"><b>S.H.A.P.E. Lab - Human-Centered Robotics</b></span>
+            <span class="exp-title accent"><b>Research Assistant- S.H.A.P.E. Lab and Human-Centered Robotics Lab</b></span>
             <span class="exp-dates">Oct 2024 – Present</span>
           </div>
           <div class="exp-body" id="shape-body">
@@ -142,7 +142,7 @@
         <!-- Origin Labs -->
         <div class="exp-card">
           <div class="exp-header" data-exp="origin">
-            <span class="exp-title accent"><b>Origin Labs - Technician</b></span>
+            <span class="exp-title accent"><b>Lab Technician- OriginLabs Penn State </b></span>
             <span class="exp-dates">Oct 2024 – Present</span>
           </div>
           <div class="exp-body" id="origin-body">
@@ -156,7 +156,7 @@
         <!-- ASME -->
         <div class="exp-card">
           <div class="exp-header" data-exp="asme">
-            <span class="exp-title accent"><b>ASME Club - Project Lead</b></span>
+            <span class="exp-title accent"><b>Design Team Officer and Project Lead- American Society of Mechanical Engineers Penn State</b></span>
             <span class="exp-dates">Jan 2024 – Present</span>
           </div>
           <div class="exp-body" id="asme-body">
