--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <!-- ASME -->
         <div class="exp-card">
           <div class="exp-header" data-exp="asme">
-            <span class="exp-title accent"><b>Design Team Officer and Project Lead- American Society of Mechanical Engineers Penn State</b></span>
+            <span class="exp-title accent"><b>Design Team Officer/ Project Lead- ASME Penn State</b></span>
             <span class="exp-dates">Jan 2024 – Present</span>
           </div>
           <div class="exp-body" id="asme-body">
