--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </ul>
         </div>
         <div>
-          
+          <h3 class="skills-title accent">Skills</h3>
           <ul class="skills-list">
             <li><b>CAD and Simulation:</b> SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim, FEA.</li>
             <li><b>Engineering Methods:</b> DFM/DFA, prototyping, root cause analysis, GD&T (ASME Y14.5), ISO standards.</li>
