--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   </header>
   <main>
-    <!-- Split hero with typing animation -->
+    <!-- Hero with typing animation -->
     <section id="home" class="split-hero">
       <div class="split-left">
         <img src="assets/bklreturns.jpg" alt="Profile Photo" class="hero-img">
@@ -36,11 +36,11 @@
       </div>
     </section>
 
-    <!-- About Me -->
+    <!-- About Me & Skills side by side, vertically centered -->
     <section id="about" class="section">
       <h2 class="section-title accent">About Me</h2>
-      <div class="about-wrap">
-        <div>
+      <div class="about-sidewrap">
+        <div class="about-col about-bio">
           <p>
             I'm a Mech.E student with a strong interest in robotics and Industry 4.0, backed by industry experience in mechanical integrity and product design. My work spans CAD modeling, FEA simulation, and prototyping for real-world applications, from vibration fixtures for PCB testing to ergonomic assistive devices. I’m drawn to the evolving challenges of miniaturization, automation, and design for manufacturability that define the future of hardware.
           </p>
@@ -48,9 +48,8 @@
             <li><b>Interests:</b> Hardware Product Design, DFAM, Human-Robot Interaction, and much more 🙂</li>
           </ul>
         </div>
-        <div>
-          <h3 class="skills-title accent">Skills</h3>
-          <ul class="skills-list">
+        <div class="about-col about-skills">
+          <ul class="skills-list center-skills">
             <li><b>CAD and Simulation:</b> SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim, FEA.</li>
             <li><b>Engineering Methods:</b> DFM/DFA, prototyping, root cause analysis, GD&T (ASME Y14.5), ISO standards.</li>
             <li><b>Programming:</b> C++, MATLAB, Visual Basic, Arduino IDE.</li>
@@ -60,60 +59,41 @@
       </div>
     </section>
 
-    <!-- Projects -->
+    <!-- Projects (title + image card, clickable, modal popups) -->
     <section id="projects" class="section">
       <h2 class="section-title accent">Projects</h2>
       <div class="projects-instructions accent">Click a project to learn more</div>
       <div class="project-grid">
-        <!-- Project Card 1 -->
         <div class="project-card" data-project="proj1">
-          <h3 class="accent">Tone Control/Karaoke Mixer Circuit</h3>
-          <p>
-            Five-stage audio processing, mixer/karaoke switching, tone control, volume adjustment, and LED volume display.
-            <span class="sm-label">NI Multisim, MATLAB</span>
-          </p>
-          <div class="achievement accent">Achievement: Clear audio with effective tone control.</div>
+          <h3 class="accent project-title">Tone Control/Karaoke Mixer Circuit</h3>
+          <img src="assets/project1-img.jpg" alt="Mixer Circuit" class="project-thumb">
         </div>
-        <!-- Project Card 2 -->
         <div class="project-card" data-project="proj2">
-          <h3 class="accent">ASME - Assistive Tech</h3>
-          <p>
-            Multi-sensor vibration feedback system for visually impaired users, Arduino, ultrasonic sensors, vibration motors for real-time obstacle detection.
-            <span class="sm-label">Arduino, C++, SolidWorks</span>
-          </p>
-          <div class="achievement accent">Achievement: Tactile feedback device improving user experience.</div>
+          <h3 class="accent project-title">ASME - Assistive Tech</h3>
+          <img src="assets/project2-img.jpg" alt="ASME Assistive Tech" class="project-thumb">
         </div>
-        <!-- Project Card 3 -->
         <div class="project-card" data-project="proj3">
-          <h3 class="accent">Kibble Dispenser for Service Dogs</h3>
-          <p>
-            Wheelchair-attachable dog food dispenser for low-dexterity users. Delivers one kibble at a time with minimal effort.
-            <span class="sm-label">Fusion 360, 3D Printing, Prototyping</span>
-          </p>
-          <div class="achievement accent">Achievement: 90% success rate operated by target users.</div>
+          <h3 class="accent project-title">Kibble Dispenser for Service Dogs</h3>
+          <img src="assets/project3-img.jpg" alt="Kibble Dispenser" class="project-thumb">
         </div>
-        <!-- Project Card 4 -->
         <div class="project-card" data-project="proj4">
-          <h3 class="accent">Additive Manufacturing Research</h3>
-          <p>
-            FEA on brass-steel alloy components with Ansys & Abaqus (&lt;2% error, 40% mesh count reduction). Simulation accuracy improved by 30%.
-            <span class="sm-label">FEA (Ansys, Abaqus)</span>
-          </p>
+          <h3 class="accent project-title">Additive Manufacturing Research</h3>
+          <img src="assets/research_img_1.jpg" alt="Additive Manufacturing Research" class="project-thumb">
         </div>
       </div>
-      <!-- Modals for each project -->
       <div id="modal-bg" class="modal-bg"></div>
-      <!-- Project modals are injected here by JS -->
     </section>
 
-    <!-- Experience (Collapsible) -->
+    <!-- Experience (collapsible sections, modern two-line headings, pronounced border) -->
     <section id="experience" class="section">
       <h2 class="section-title accent">Experience</h2>
       <div class="exp-list">
-        <!-- Amphenol -->
-        <div class="exp-card">
+        <div class="exp-card exp-long">
           <div class="exp-header" data-exp="amphenol">
-            <span class="exp-title accent"><b>Mechanical Intergity Engineering Intern- Amphenol Communication Solutions</b></span>
+            <div class="exp-headlines">
+              <span class="exp-title accent"><b>Mechanical Integrity Engineering Intern</b></span>
+              <span class="exp-company accent">Amphenol Communication Solutions</span>
+            </div>
             <span class="exp-dates">May 2025 – Aug 2025</span>
           </div>
           <div class="exp-body" id="amphenol-body">
@@ -125,10 +105,12 @@
             </ul>
           </div>
         </div>
-        <!-- SHAPE Lab -->
-        <div class="exp-card">
+        <div class="exp-card exp-long">
           <div class="exp-header" data-exp="shape">
-            <span class="exp-title accent"><b>Research Assistant- S.H.A.P.E. Lab and Human-Centered Robotics Lab</b></span>
+            <div class="exp-headlines">
+              <span class="exp-title accent"><b>Research Assistant</b></span>
+              <span class="exp-company accent">S.H.A.P.E. Lab and Human-Centered Robotics Lab</span>
+            </div>
             <span class="exp-dates">Oct 2024 – Present</span>
           </div>
           <div class="exp-body" id="shape-body">
@@ -139,10 +121,12 @@
             </ul>
           </div>
         </div>
-        <!-- Origin Labs -->
-        <div class="exp-card">
+        <div class="exp-card exp-long">
           <div class="exp-header" data-exp="origin">
-            <span class="exp-title accent"><b>Lab Technician- OriginLabs Penn State </b></span>
+            <div class="exp-headlines">
+              <span class="exp-title accent"><b>Lab Technician</b></span>
+              <span class="exp-company accent">OriginLabs Penn State</span>
+            </div>
             <span class="exp-dates">Oct 2024 – Present</span>
           </div>
           <div class="exp-body" id="origin-body">
@@ -153,10 +137,12 @@
             </ul>
           </div>
         </div>
-        <!-- ASME -->
-        <div class="exp-card">
+        <div class="exp-card exp-long">
           <div class="exp-header" data-exp="asme">
-            <span class="exp-title accent"><b>Design Team Officer/ Project Lead- ASME Penn State</b></span>
+            <div class="exp-headlines">
+              <span class="exp-title accent"><b>Design Team Officer / Project Lead</b></span>
+              <span class="exp-company accent">ASME Penn State</span>
+            </div>
             <span class="exp-dates">Jan 2024 – Present</span>
           </div>
           <div class="exp-body" id="asme-body">
@@ -187,11 +173,9 @@
       </div>
     </section>
   </main>
-
   <footer class="footer">
     &copy; 2025 Atharva Joshi. Built for Penn State ME Portfolio.
   </footer>
-
   <script src="portfolio.js"></script>
 </body>
 </html>
