--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
 
   <main>
-    <!-- Split hero with typing animation -->
+    <!-- Hero -->
     <section id="home" class="split-hero">
       <div class="split-left">
         <img src="assets/bklreturns.jpg" alt="Profile Photo" class="hero-img">
@@ -41,7 +41,6 @@
     <section id="about" class="section">
       <h2 class="section-title accent">About Me</h2>
       <div class="about-wrap">
-        <!-- Left side: refreshed About Me text -->
         <div>
           <p>
             I’m an enthusiastic Mechanical Engineering student passionate about robotics, automation, and Industry 4.0.
@@ -58,8 +57,6 @@
             <li><b>Interests:</b> Hardware Product Design, DFAM, Human-Robot Interaction, and more 🙂</li>
           </ul>
         </div>
-
-        <!-- Right side: skills, centered vertically (no title) -->
         <div class="skills-centered">
           <ul class="skills-list">
             <li><b>CAD and Simulation:</b> SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim, FEA.</li>
@@ -76,32 +73,27 @@
       <h2 class="section-title accent">Projects</h2>
       <div class="projects-instructions accent">Click a project to learn more</div>
       <div class="project-grid">
-        <!-- Project Card 1 -->
         <div class="project-card" data-project="proj1">
           <h3 class="accent">Tone Control/Karaoke Mixer Circuit</h3>
           <img src="assets/project1-img.jpg" alt="Tone Control Circuit" class="project-img">
           <div class="achievement accent">Achievement: Clear audio with effective tone control.</div>
         </div>
-        <!-- Project Card 2 -->
         <div class="project-card" data-project="proj2">
-          <h3 class="accent">ASME - Assistive Tech</h3>
+          <h3 class="accent">Multi-Sensor Haptic Headset – ASME</h3>
           <img src="assets/project2-img.jpg" alt="Assistive Tech" class="project-img">
           <div class="achievement accent">Achievement: Tactile feedback device improving user experience.</div>
         </div>
-        <!-- Project Card 3 -->
         <div class="project-card" data-project="proj3">
           <h3 class="accent">Kibble Dispenser for Service Dogs</h3>
           <img src="assets/project3-img.jpg" alt="Kibble Dispenser" class="project-img">
           <div class="achievement accent">Achievement: 90% success rate operated by target users.</div>
         </div>
-        <!-- Project Card 4 -->
         <div class="project-card" data-project="proj4">
           <h3 class="accent">Additive Manufacturing Research</h3>
           <img src="assets/research_img_1.jpeg" alt="AM Research" class="project-img">
+          <div class="achievement accent">Achievement: Successfully reduced mesh element count by 40% while improving simulation reliability by 30%.</div>
         </div>
       </div>
-
-      <!-- Modal background -->
       <div id="modal-bg" class="modal-bg"></div>
     </section>
 
@@ -109,7 +101,6 @@
     <section id="experience" class="section">
       <h2 class="section-title accent">Experience</h2>
       <div class="exp-list">
-        <!-- Amphenol -->
         <div class="exp-card">
           <div class="exp-header" data-exp="amphenol">
             <span class="exp-title accent"><b>Mechanical Integrity Engineering Intern</b></span>
@@ -125,7 +116,7 @@
             </ul>
           </div>
         </div>
-        <!-- SHAPE Lab -->
+
         <div class="exp-card">
           <div class="exp-header" data-exp="shape">
             <span class="exp-title accent"><b>Research Assistant</b></span>
@@ -140,7 +131,7 @@
             </ul>
           </div>
         </div>
-        <!-- Origin Labs -->
+
         <div class="exp-card">
           <div class="exp-header" data-exp="origin">
             <span class="exp-title accent"><b>Lab Technician</b></span>
@@ -155,7 +146,7 @@
             </ul>
           </div>
         </div>
-        <!-- ASME -->
+
         <div class="exp-card">
           <div class="exp-header" data-exp="asme">
             <span class="exp-title accent"><b>Design Team Officer / Project Lead</b></span>
