--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
           <img src="assets/research_img_1.jpeg" alt="AM Research" class="project-img">
           <div class="achievement accent">Achievement: Successfully reduced mesh element count by 40% while improving simulation reliability by 30%.</div>
         </div>
+        <!-- Project 5 -->
+        <div class="project-card" data-project="proj5">
+          <h3 class="accent">Coming Soon!</h3>
+          <img src="assets/project5-img.jpg" alt="Coming Soon" class="project-img">
+        </div>
       </div>
       <div id="modal-bg" class="modal-bg"></div>
     </section>
