--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             LinkedIn: <a href="https://www.linkedin.com/in/atharvajoshi2027" target="_blank">View Profile</a><br>
             GitHub: <a href="https://github.com/WarGodAKJ" target="_blank">WarGodAKJ</a>
           </p>
-          <p>Interested in the research report or design proposal? Reach out to learn more or collaborate.</p>
+          <p>Thank you for viewing my portfolio! Feel free to reach out to learn more about my projects or collaborate!</p>
         </div>
         <div>
           <img src="assets/bkl.jpg" alt="Contact Illustration" class="contact-img">
