--- a/index.html
+++ b/index.html
@@ -103,24 +103,27 @@
     </section>
 
     <!-- Experience -->
+     
     <section id="experience" class="section">
-      <h2 class="section-title accent">Experience</h2>
-      <div class="exp-list">
-        <div class="exp-card">
-          <div class="exp-header" data-exp="amphenol">
-            <span class="exp-title accent"><b>Mechanical Integrity Engineering Intern</b></span>
-            <span class="exp-subtitle">Amphenol Communication Solutions</span>
-            <span class="exp-dates">May 2025 – Aug 2025</span>
-          </div>
-          <div class="exp-body" id="amphenol-body">
-            <ul>
-              <li>Increased reporting efficiency for 15+ projects by automating LLCR data analysis using Minitab and Excel.</li>
-              <li>Reduced report turnaround time by 30 percent by co-developing a PowerApp integrated with SharePoint for structured customer failure submissions.</li>
-              <li>Accelerated test setups for 10+ client projects (incl. Cisco) by designing custom vibration fixtures in SolidWorks for complex PCB layouts.</li>
-              <li>Resolved qualification test failures through root cause analysis, ensuring compliance with ISO standards.</li>
-            </ul>
-          </div>
-        </div>
+        <h2 class="section-title accent">Experience</h2>
+        <div class="projects-instructions accent">Click an experience to learn more</div>
+        <div class="exp-list">
+            <div class="exp-card">
+                <div class="exp-header" data-exp="amphenol">
+                    <span class="exp-title accent"><b>Mechanical Integrity Engineering Intern</b></span>
+                    <span class="exp-subtitle">Amphenol Communication Solutions</span>
+                    <span class="exp-dates">May 2025 – Aug 2025</span>
+                </div>
+                <div class="exp-body" id="amphenol-body">
+                    <ul>
+                        <li>Increased reporting efficiency for 15+ projects by automating LLCR data analysis using Minitab and Excel.</li>
+                        <li>Reduced report turnaround time by 30 percent by co-developing a PowerApp integrated with SharePoint for structured customer failure submissions.</li>
+                        <li>Accelerated test setups for 10+ client projects (incl. Cisco) by designing custom vibration fixtures in SolidWorks for complex PCB layouts.</li>
+                        <li>Resolved qualification test failures through root cause analysis, ensuring compliance with ISO standards.</li>
+                    </ul>
+                </div>
+            </div>
+
 
         <div class="exp-card">
           <div class="exp-header" data-exp="shape">
