--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
       </nav>
-      <div class="menu-icon">☰</div>
+      <div class="menu-icon">&#9776;</div>
     </div>
   </header>
+
   <main>
     <!-- Hero -->
     <section id="home" class="split-hero">
@@ -35,6 +36,7 @@
         </div>
       </div>
     </section>
+
     <!-- About Me -->
     <section id="about" class="section">
       <h2 class="section-title accent">About Me</h2>
@@ -44,7 +46,7 @@
           <p>
             I’m an enthusiastic Mechanical Engineering student passionate about robotics, automation, and Industry 4.0.
             My academic foundation and hands-on industry experiences have shaped me into someone who thrives on solving
-            complex challenges, from designing vibration fixtures for PCB testing to creating ergonomic assistive devices
+            complex challenges — from designing vibration fixtures for PCB testing to creating ergonomic assistive devices
             that make a real impact.
           </p>
           <p>
@@ -56,6 +58,7 @@
             <li><b>Interests:</b> Hardware Product Design, DFAM, Human-Robot Interaction, and more 🙂</li>
           </ul>
         </div>
+
         <!-- Skills remain separate -->
         <div class="skills-centered">
           <ul class="skills-list">
@@ -67,6 +70,7 @@
         </div>
       </div>
     </section>
+
     <!-- Projects -->
     <section id="projects" class="section">
       <h2 class="section-title accent">Projects</h2>
@@ -100,6 +104,7 @@
       </div>
       <div id="modal-bg" class="modal-bg"></div>
     </section>
+
     <!-- Experience -->
     <section id="experience" class="section">
       <h2 class="section-title accent">Experience</h2>
@@ -120,6 +125,7 @@
             </ul>
           </div>
         </div>
+
         <div class="exp-card">
           <div class="exp-header" data-exp="shape">
             <span class="exp-title accent"><b>Research Assistant</b></span>
@@ -134,6 +140,7 @@
             </ul>
           </div>
         </div>
+
         <div class="exp-card">
           <div class="exp-header" data-exp="origin">
             <span class="exp-title accent"><b>Lab Technician</b></span>
@@ -148,6 +155,7 @@
             </ul>
           </div>
         </div>
+
         <div class="exp-card">
           <div class="exp-header" data-exp="asme">
             <span class="exp-title accent"><b>Design Team Officer / Project Lead</b></span>
@@ -163,6 +171,7 @@
         </div>
       </div>
     </section>
+
     <!-- Contact -->
     <section id="contact" class="section">
       <h2 class="section-title accent">Contact</h2>
@@ -181,9 +190,12 @@
       </div>
     </section>
   </main>
+
   <footer class="footer">
     &copy; 2025 Atharva Joshi. Built for Penn State ME Portfolio.
   </footer>
+
   <script src="portfolio.js"></script>
 </body>
 </html>
+    
