--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p>
             I’m an enthusiastic Mechanical Engineering student passionate about robotics, automation, and Industry 4.0.
             My academic foundation and hands-on industry experiences have shaped me into someone who thrives on solving
-            complex challenges — from designing vibration fixtures for PCB testing to creating ergonomic assistive devices
+            complex challenges, from designing vibration fixtures for PCB testing to creating ergonomic assistive devices
             that make a real impact.
           </p>
           <p>
