--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <!-- Skills remain separate -->
         <div class="skills-centered">
           <ul class="skills-list">
-            <li><b>CAD and Simulation:</b> SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim, FEA.</li>
-            <li><b>Engineering Methods:</b> DFM/DFA, prototyping, root cause analysis, GD&T (ASME Y14.5), ISO standards.</li>
+            <li><b>CAD and Simulation:</b> SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim.</li>
+            <li><b>Engineering Methods:</b> CAD, FEA, DFM/DFA, prototyping, root cause analysis, GD&T (ASME Y14.5), ISO standards.</li>
             <li><b>Programming:</b> C++, MATLAB, Visual Basic, Arduino IDE.</li>
             <li><b>Tools:</b> Microsoft Office, Minitab, PowerApps, First Aid/CPR/AED.</li>
           </ul>
