--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="skills-centered">
           <ul class="skills-list">
             <li><b>CAD and Simulation:</b> SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim.</li>
-            <li><b>Engineering Methods:</b> CAD, FEA, DFM/DFA, prototyping, root cause analysis, GD&T (ASME Y14.5), ISO standards.</li>
+            <li><b>Engineering Methods:</b> FEA, DFM/DFA, prototyping, root cause analysis, GD&T (ASME Y14.5), ISO standards.</li>
             <li><b>Programming:</b> C++, MATLAB, Visual Basic, Arduino IDE.</li>
             <li><b>Tools:</b> Microsoft Office, Minitab, PowerApps, First Aid/CPR/AED.</li>
           </ul>
