--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   </main>
 
   <footer class="footer">
-    &copy; 2025 Atharva Joshi. Built for Penn State ME Portfolio.
+    &copy; Atharva Joshi Penn State ME Portfolio
   </footer>
 
   <script src="portfolio.js"></script>
