back to square 1

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   </main>
 
   <footer class="footer">
-    &copy; Atharva Joshi Penn State ME Portfolio
+    &copy; Atharva Joshi Penn State ME Portfolio.
   </footer>
 
   <script src="portfolio.js"></script>
