--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <div class="hamburger-wrap">
         <button class="menu-icon" id="hamburger" aria-label="Toggle navigation" aria-expanded="false">
           <span class="hamburger-bars" aria-hidden="true">&#9776;</span>
-          <span class="hamburger-close" aria-hidden="true" style="display:none;">&times;</span>
+          <!-- ✅ removed inline display:none, CSS handles visibility -->
+          <span class="hamburger-close" aria-hidden="true">&times;</span>
         </button>
 
         <!-- Dropdown nav that appears under the hamburger, right edges aligned -->
