--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         </div>
         <div class="skills-centered">
           <ul class="skills-list">
-            <li><b>CAD and Simulation:</b><br>SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, <br> NI Multisim, Simulink</li>
-            <li><b>Engineering Methods:</b><br>DFM/DFA, prototyping, root cause analysis, <br> GD&T (ASME Y14.5), ISO standards</li>
+            <li><b>CAD and Simulation:</b><br>SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim, Simulink</li>
+            <li><b>Engineering Methods:</b><br>DFM/DFA, prototyping, root cause analysis, GD&T, ISO standards</li>
             <li><b>Programming:</b><br>C++, MATLAB, Visual Basic, Arduino IDE</li>
             <li><b>Tools:</b><br>Microsoft Office, Minitab, PowerApps, First Aid/CPR/AED</li>
           </ul>
