--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 
     <section id="contact" class="section">
       <h2 class="section-title accent">Contact</h2>
-      <div class="contact-wrap centered-contact">
-        <div>
+      <div class="about-wrap">
+        <div class="about-card">
           <p>
             Email: <a href="mailto:atharvajosh@gmail.com">atharvajosh@gmail.com</a><br>
             LinkedIn: <a href="https://www.linkedin.com/in/atharvajoshi2027" target="_blank">View Profile</a><br>
@@ -219,7 +219,7 @@
           </p>
           <p>Thank you for viewing my portfolio! Feel free to reach out to learn more about my projects or collaborate!</p>
         </div>
-        <div>
+        <div class="skills-centered">
           <img src="assets/bkl.jpg" alt="Contact Illustration" class="contact-img">
         </div>
       </div>
