--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="skills-centered">
           <ul class="skills-list">
             <li><b>CAD and Simulation:</b><br>SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim, Simulink</li>
-            <li><b>Engineering Methods:</b><br>DFM/DFA, prototyping, root cause analysis, GD&T, ISO standards</li>
+            <li><b>Engineering Methods:</b><br>DFM/DFA, Prototyping, Root Cause Analysis, GD&T, ISO Standards</li>
             <li><b>Programming:</b><br>C++, MATLAB, Visual Basic, Arduino IDE</li>
             <li><b>Tools:</b><br>Microsoft Office, Minitab, PowerApps, First Aid/CPR/AED</li>
           </ul>
