--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             manufacturability</span>. I’m particularly drawn to bridging the gap between design concepts and real-world
             applications through CAD modeling, FEA simulation, and rapid prototyping.
           </p>
-          <ul class="info-list no-bullets">
-            <li><b>Interests:</b> <br> Hardware Product Design, DFAM, Human-Robot Interaction, and more 🙂</li>
-          </ul>
+          <br>
+          <b>Interests:</b> <br> Hardware Product Design, DFAM, Human-Robot Interaction, and more 🙂</li>
+          
         </div>
         <div class="skills-centered">
           <ul class="skills-list">
