--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <canvas id="lava-lamp-bg"></canvas>
+
   <header class="navbar" id="main-navbar">
     <div class="nav-flex">
       <div class="logo">Atharva Joshi</div>
