--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="about-header-main">Undergrad Student | B.S. Mechanical Engineering | Minor: Mechatronics</div>
           <div class="about-header-tagline">Empowering the Future through Intelligent Engineering</div>
         </div>
-        <button id="gyro-button" style="margin-top: 20px; padding: 10px 20px; font-size: 1rem; cursor: pointer;">Enable Gyroscope Control</button>
+        <button id="gyro-button" class="gyro-button">Enable Motion Control</button>
       </div>
     </section>
 
