full-screen update

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       </nav>
 
       <div class="hamburger-wrap">
+        <button class="menu-icon fullscreen-button" id="fullscreen-button" aria-label="Toggle Fullscreen" title="Toggle Fullscreen">
+          <svg class="fullscreen-open" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24"><path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 2h-2v3h-3v2h5v-5zm-3-4V5h-3v2h3v3h2V5z"/></svg>
+          <svg class="fullscreen-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24" style="display: none;"><path d="M5 16h3v3h2v-5H5v2zm3-8H5v2h5V5H8v3zm6 11h2v-3h3v-2h-5v5zm2-11V5h-2v5h5V8h-3z"/></svg>
+        </button>
+
         <button class="menu-icon" id="hamburger" aria-label="Toggle navigation" aria-expanded="false">
           <span class="hamburger-bars" aria-hidden="true">&#9776;</span>
           <span class="hamburger-close" aria-hidden="true">&times;</span>
